# operator-bug-search

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default_search_config.json
src/operator_bug_search/: cli.py  config.py  github_client.py  models.py  pipeline.py  query_builder.py  storage.py
tests/: test_pipeline.py  test_query_builder.py
